[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Images/star.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Lobby/Lobby.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.259494, 0.504545 ), 0.0, 0.0, 0, 0, Vector2( 0.493671, 0.0238637 ), 0.0, 0.0, 0, 0, Vector2( 0.746835, 0.495454 ), 0.0, 0.0, 0, 0, Vector2( 0.993671, 0.0238637 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 500, 700, 1 )
flag_disable_z = true
gravity = Vector3( 50, 0, 0 )
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/Fonts/Dead Revolution.otf"

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 1.9
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -3, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Dead Revolution.otf"

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Fonts/Dead Revolution.otf"

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Assets/Fonts/Dead Revolution.otf"

[sub_resource type="DynamicFont" id=12]
size = 25
font_data = SubResource( 11 )

[sub_resource type="Animation" id=13]
resource_name = "load"
length = 1.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasModulate:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasModulate:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasModulate:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasModulate:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Control/Panel/Label:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 59.7462, -0.25, 0, 0.25, 0, 29.2412, -0.25, 0, 0.25, 0, 28.7395, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1, 1.3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Control/Panel/Label:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 509.375, -0.25, 0, 0.25, 0, -106.44, -0.25, 0, 0.25, 0, -61.2419, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1, 1.3 )
}

[sub_resource type="Animation" id=14]
resource_name = "transition"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasModulate:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasModulate:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasModulate:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasModulate:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5 )
}

[node name="Lobby" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = -0.581055
anchor_top = -0.815
anchor_right = 1.68164
anchor_bottom = 2.255
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 283.951, 499.082 )
amount = 50
lifetime = 5.0
visibility_rect = Rect2( -200, -300, 1000, 1000 )
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.000568628
anchor_top = -0.0141517
anchor_right = 1.00057
anchor_bottom = 0.985848
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -196.93
margin_top = 262.087
margin_right = 175.07
margin_bottom = 418.087
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel"]
anchor_top = -0.00807657
anchor_bottom = -0.00807657
margin_left = 59.7462
margin_top = 510.635
margin_right = 369.747
margin_bottom = 559.635
rect_rotation = 3.0
rect_scale = Vector2( 1.1, 1.1 )
rect_pivot_offset = Vector2( 155, 25 )
custom_fonts/font = SubResource( 5 )
text = "**Entre ** nosotros **"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Panel/Label"]
autoplay = "idle"
anims/idle = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
margin_left = 12.5724
margin_top = 7.84128
margin_right = 366.572
margin_bottom = 160.841
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
margin_right = 354.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 27.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 8 )
text = "Nombre:"

[node name="Name" type="LineEdit" parent="Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 354.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 8 )
text = "Nombre"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 354.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 27.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 8 )
text = "IP:"

[node name="IP" type="LineEdit" parent="Control/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 354.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 8 )
text = "127.0.0.1"
align = 2

[node name="ErrorLabel" type="Label" parent="Control/Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 354.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
margin_top = 96.0
margin_right = 354.0
margin_bottom = 129.0
alignment = 1

[node name="HostButton" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 86.0
margin_right = 175.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 12 )
text = "Crear"

[node name="JoinButton" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 179.0
margin_right = 268.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 12 )
text = "Unirse"

[node name="ItemList" type="ItemList" parent="Control/Panel/VBoxContainer"]
margin_top = 133.0
margin_right = 354.0
margin_bottom = 142.0
auto_height = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/load = SubResource( 13 )
anims/transition = SubResource( 14 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer3/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer3/JoinButton" to="." method="_on_JoinButton_pressed"]
